--- a/src/Presentation/Polpware.NopWeb.Data/Polpware.NopWeb.Data.csproj
+++ b/src/Presentation/Polpware.NopWeb.Data/Polpware.NopWeb.Data.csproj
@@ -5,14 +5,14 @@
     <Copyright>Copyright © Polpware</Copyright>
     <Company>Polpware</Company>
     <Authors>Polpware</Authors>
-    <Version>4.0.0.0</Version>
+    <Version>4.0.10.0</Version>
     <Description>Auto-generated data modules from Nop.Web.</Description>
     <PackageLicenseUrl>http://www.nopcommerce.com/licensev3.aspx</PackageLicenseUrl>
     <PackageProjectUrl>http://www.nopcommerce.com/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/polpware/nopcommerce</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <FileVersion>4.1.2.0</FileVersion>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <FileVersion>4.0.10.0</FileVersion>
     <RootNamespace>Polpware.NopWeb</RootNamespace>
   </PropertyGroup>
 
